src/objects/AgendaItemTemplate__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProjectReviewTemplate__c</fullName>
        <label>Project Review Template</label>
        <referenceTo>ProjectReviewTemplate__c</referenceTo>
        <relationshipLabel>Agenda Item Templates</relationshipLabel>
        <relationshipName>AgendaItemTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agenda Item Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProjectReviewTemplate__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Agenda Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Item Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>